objects/sortablegrid__sdg_Preferences__c.object
<CustomObject>
    <label>Sortable Data Grid Preference</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Sortable Data Grid Preferences Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sortable Data Grid Preferences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>sortablegrid__User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sortable_Data_Grid_Preferences</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>sortablegrid__sdgKey__c</fullName>
        <label>sdgKey</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sortablegrid__Filters__c</fullName>
        <label>Filters</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
</CustomObject>